--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: ACTmapR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Read in the ACT Fixed Width File
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Joshua De la Bruere
+Maintainer: Joshua@delabj.com
+Description: This package contains a flexable mapping system for reading in the information 
+                From the FWF they ship to High Schools. 
+License: MIT
 Encoding: UTF-8
 LazyData: true
+Imports: dplyr, tidyverse
