--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,4 @@ Description: This package contains a flexable mapping system for reading in the 
 License: MIT
 Encoding: UTF-8
 LazyData: true
-Imports: dplyr, tidyverse
+Imports: dplyr, tidyverse, shiny
